# 2020_06_Massif_autodetect

./: .gitignore  CMakeLists.txt  README.md  dconfig  gen_and_show_docs.py  gen_and_show_docs.sh  main.cpp
analyzer/: CMakeLists.txt
analyzer/include/analyzer/: analyzer.hpp
analyzer/src/: analyzer.cpp  autlajersi
parser/: CMakeLists.txt
parser/include/parser/: node.hpp  parser.hpp  processing.hpp  rules.hpp  snapshot.hpp
parser/src/: node.cpp  parser.cpp  snapshot.cpp
samples/: file  massif_example(peak,real_peak).c  massif_example.c  massif_example2.c  massif_example3.c  pomocni.c  sample1.c
utils/: CMakeLists.txt
utils/include/utils/: colors.hpp  executor_manager.hpp  options_desc.hpp
utils/src/: executor_manager.cpp  options_desc.cpp
